Update README.md
Add some more important information